server/modules/book-page/ui/src/index.scss
@import '../../../asset/ui/src/scss/settings';
@import 'preview';
@import 'pager';

.pdl-book {
  display: grid;
  grid-template: auto auto / 1fr;
  font-size: 30px;
  font-weight: 500;
  text-align: left;
  background-color: #F5F4F0;

  @media (min-width: map-get($breakpoints, 'sm')) {
    grid-template-columns: 1fr 1fr;
  }

  h1 {
    font-size: 35.5px;
    font-weight: 400;
    text-align: left;
    margin: 0;
    letter-spacing: 0.01px;

    @media (min-width: map-get($breakpoints, 'md')) {
      font-size: 82px;
      font-weight: 450;
    }
  }

  .pdl-book__image-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .pdl-book__image {
    position: relative;
    object-fit: contain;
    box-shadow: -5px 9px 6px 3px rgba(94, 94, 94, 0.33);
    width: 265px;
    top: 50px;

    @media (min-width: map-get($breakpoints, 'sm')) {
      top: auto;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      width: 447px;
      box-shadow: -12px 11px 16px 3px rgba(94, 94, 94, 0.33);
    }
  }

  .pdl-book__description {
    display: flex;
    order: 1;

    @media (min-width: map-get($breakpoints, 'sm')) {
      min-height: 510px;
      order: 0;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      min-height: 888px;
    }
  }

  .pdl-book__container {
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: space-between;

    @media (min-width: map-get($breakpoints, 'sm')) {
      padding-left: 20px;
      padding-right: 20px;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      padding: 14px 118px 10px 40px;
    }
  }

  .pdl-book__excerpt {
    quotes: '\201c' '\201d';
    font-weight: 400;
    text-align: left;
    color: white;

    @media (min-width: map-get($breakpoints, 'sm')) {
      font-size: 30px;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      font-size: 64px;
      line-height: 1;
    }
  }
  .pdl-rich-text .pdl-book__excerpt:before {
    content: open-quote;
  }
  .pdl-rich-text .pdl-book__excerpt:after {
    content: close-quote;
  }
  .pdl-book__description .pdl-rich-text {
    padding: 10px 20px;

    @media screen and (min-width: map-get($breakpoints, 'sm')) {
      padding: 0;
      padding-right: 14px;
    }

    p {
    line-height: 30px;

      @media screen and (min-width: map-get($breakpoints, 'sm')) {
        margin-block-start: 20px;
      }
    }
  }

  .pdl-book__link {
    display: none;
    background-color: black;
    color: white;
    position: relative;
    font-weight: 400;
    text-decoration: none;
    border-radius: 4px;
    gap: 9px;
    padding: 12px 12px;
    font-size: 17.5px;
    width: fit-content;
    justify-self: center;
    margin-top: 113px;
    margin-bottom: 20px;
    padding-left: 13px;
    align-items: center;

    svg {
      width: 20px;
      height: 16px
    }

    @media (min-width: map-get($breakpoints, 'sm')) {
      display: flex;
      gap: 10px;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      gap: 20px;
      padding: 20px 22px;
      bottom: 10px;
      font-size: 25.5px;

      svg {
        width: 32px;
        height: 32px
      }
      &:hover svg g {
        animation: hoverArrow 300ms ease;
      }
    }
  }

  .pdl-book__link--mobile {
    display: flex;

    @media (min-width: map-get($breakpoints, 'sm')) {
      display: none;
    }
  }

  .pdl-book__info {
    background-color: black;
    color: white;
    padding: 20px 20px 17px 20px;
    display: flex;
    flex-direction: column;
    gap: 15px;
    letter-spacing: 0.25px;
    font-weight: 400;

    @media (min-width: map-get($breakpoints, 'sm')) {
      gap: 6px;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      padding: 100px 65px 157px 65px;
      gap: 8px;
    }

    &--bottom {
      gap: 12px;
      padding: 20px 20px 9px 20px;
      font-size: 13px;
      border-top: 1px solid #202020;

      @media (min-width: map-get($breakpoints, 'sm')) {
        border-top: none;
      }

      @media (min-width: map-get($breakpoints, 'md')) {
        padding: 100px 20px 65px 40px;
        gap: 18px;
        font-size: 24px;
      }
    }
  }

  .pdl-book__author {
    display: flex;
    gap: 9px;
    font-size: 17px;
    align-items: center;
    color: white;
    transition: 0.3s;

    &:hover {
      cursor: pointer;
      fill: #7B7A78;
      color: #7B7A78;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      gap: 15px;
      font-size: 25px;
    }

    img {
      width: 24px;
      height: 24px;
      object-fit: cover;
      filter: grayscale(1);
      border-radius: 4px;

      @media (min-width: map-get($breakpoints, 'md')) {
        width: 42px;
        height: 42px;
      }
    }
  }

  .pdl-book__formats {
    display: flex;
    gap: 4px;
    font-size: 17px;
    align-items: center;

    @media (min-width: map-get($breakpoints, 'md')) {
      margin-top: 4px;
      gap: 7px;
    }
  }

  .pdl-book__format {
    width: 80px;
    border: 1px solid white;
    border-radius: 4px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 12px;

    @media (min-width: map-get($breakpoints, 'sm')) {
      width: 84px;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      font-size: 25px;
      padding: 20px;
      width: 156px;
    }

    @media (min-width: map-get($breakpoints, 'md')) and (max-width: 1181px) {
      width: 120px;
    }

    svg {
      width: 20px;
      height: 16px;

      @media (min-width: map-get($breakpoints, 'md')) {
        width: 30px;
        height: 30px;
      }
    }

    &:hover svg g {
      animation: hoverArrow 300ms ease;
    }
  }

  .pdl-book__credits {
    font-weight: 500;
    margin-top: 8px;
    font-size: 13px;

    @media (min-width: map-get($breakpoints, 'md')) {
      padding-right: 100px;
    }


    p {
      font-weight: 400;
      margin-top: 0;
    }
  }
}

.pdl-legal-notice {
  padding: 20px;
  padding-bottom: 18px;
  display: flex;
  flex-direction: column;
  gap: 16px;

  @media (min-width: map-get($breakpoints, 'sm')) {
    flex-direction: row;

    & > * {
      flex: 1 1 0px;
    }
  }

  @media (min-width: map-get($breakpoints, 'md')) {
    padding: 32px;
  }

  &__title {
    font-size: 18px;
    font-weight: 500;
    text-align: left;

    @media (min-width: map-get($breakpoints, 'md')) {
      font-size: 25.5px;
      font-weight: 450;
    }
  }

  &__content {
    font-size: 14px;
    font-weight: 400;
    text-align: left;

    @media (min-width: map-get($breakpoints, 'sm')) {
      padding-left: 20px;
    }

    @media (min-width: map-get($breakpoints, 'md')) {
      font-size: 18px;
      padding-left: 60px;
    }
  }
}

.pdl-book__books {
  font-size: 30px;
  font-weight: 500;


  h2 {
    font-size: 50px;
    font-weight: 500;
    text-align: left;
  }

  .pdl-book__books-list {
    padding-top: 20px;
  }

  .pdl-book__book-img {
    box-shadow: -5px 8px 11px 3px rgba(94, 94, 94, 0.33);
    margin-bottom: 10px;
    position: relative;
    top: 0;
    transition: 0.3s;
  }

  .pdl-book__book-link {
    color: black;
    text-decoration: none;

    &:hover {
      .pdl-book__book-img {
        box-shadow: -3px 23px 23px 3px rgba(94, 94, 94, 0.4);
        top: -30px;
      }
    }
  }
}

.pdl-books {
  h1 {
    margin-top: 14px;
    margin-left: 20px;
    margin-bottom: 20px;
    text-align: left;
    font-weight: 450;

    @media (min-width: map-get($breakpoints, 'md')) {
      font-size: 158px;
      font-weight: 500;
      margin-top: 50px;
      margin-left: 32px;
      margin-bottom: 48px;
      letter-spacing: -4px;
    }
  }

  .pdl-books__container {
    display: flex;
    flex-wrap: wrap;
    align-items: normal;
    justify-content: center;
    row-gap: 65px;
    margin-bottom: 40px;

    @media (min-width: map-get($breakpoints, 'sm')) {
      row-gap: 67px;
    }
    @media (min-width: map-get($breakpoints, 'md')) {
      row-gap: 4px;
    }

    .pdl-book-preview {
      width: 175px;

      @media (min-width: map-get($breakpoints, 'sm')) {
        width: 227px;
      }

      @media (min-width: map-get($breakpoints, 'md')) {
        width: 318px;
        max-height: 562px;

        .pdl-book-preview__formats {
          transform: translateY(20px);
        }

        &:hover {
          .pdl-book__image {
            top: -20px;
          }
          .pdl-book-preview__formats {
            transform: translateY(12px);
          }
        }
      }

      .pdl-book__image {
        @media (min-width: map-get($breakpoints, 'sm')) {
          margin-bottom: 5px;
        }
      }

      .pdl-book-preview__view {
        top: -172px;
        left: 48px;

        @media (min-width: map-get($breakpoints, 'sm')) {
          top: -216px;
          left: 75px;
        }

        @media (min-width: map-get($breakpoints, 'md')) {
          top: auto;
          left: auto;
          padding: 12px;
          padding-top: 14px;
          font-size: 18px;
        }
      }

      .pdl-book-preview__cta {
        font-size: 17px;
        width: 150px;

        @media (min-width: map-get($breakpoints, 'sm')) {
          width: 202px;
          padding: 10px 14px;

          .cta__extension {
            display: inline;
          }
        }

        @media (min-width: map-get($breakpoints, 'md')) {
          width: 179px;
          padding: 16px 14px;
        }

        svg {
          width: 16px;
          height: 16px;
        }
      }

      .pdl-book-preview__other {
        width: 22px;

        @media (min-width: map-get($breakpoints, 'md')) {
          width: 36px;
        }
      }

      .pdl-book-preview__format--second, .pdl-book-preview__format--third {
        width: 159px;

        @media (min-width: map-get($breakpoints, 'sm')) {
          width: 211px;
        }

        @media (min-width: map-get($breakpoints, 'md')) {
          width: 217px;
          padding-left: 20px;
          font-size: 17px;

          &:hover {
            width: 215px;
          }
        }
      }
    }
  }
}

